# jogosDB

./: .gitignore  README.md  homepage.py  pyproject.toml  scrapinghub.yml  scrapy.cfg  scripts.py  setup.py  teste.py
jogosDB/: items.py  pipelines.py  settings.py
jogosDB/spiders/: .steam_especiais.py.swp  gog_especiais.py  nuuvem_especiais.py  steam_especiais.py
pages/: GOG.py  Nuuvem.py  Steam.py
project.egg-info/: SOURCES.txt  entry_points.txt  top_level.txt
