[tool.poetry]
name = "jogosDB"
version = "0.1.0"
description = ""
authors = ["Your Name <you@example.com>"]
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.9.16"
scrapy = "^2.9.0"
scrapy-splash = "^0.9.0"
streamlit = "^1.24.0"
schedule = "^1.2.0"
shub = "^2.14.5"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
