[tool.poetry]
readme = "README.md"
package-mode = false

[tool.poetry.dependencies]
python = "^3.9.16"
scrapy = "^2.9.0"
scrapy-splash = "^0.9.0"
streamlit = "^1.24.0"
schedule = "^1.2.0"
shub = "^2.14.5"
selenium = "^4.12.0"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"